--- a/.github/workflows/Postman.yaml
+++ b/.github/workflows/Postman.yaml
@@ -38,7 +38,7 @@ jobs:
           git add docs
           git commit -m "add docs"
           git pull
-          git push https://${{secrets.TOKEN}}@github.com/${{GunterLuck.Postman_Newman_GitHub_Actions}}.git HEAD:main
+          git push https://${{secrets.TOKEN}}@github.com/${{github.repository}}.git HEAD:main
 
       # Upload the contents of docs directory to workspace
       - name: Output the run Details
