--- a/.github/workflows/Postman.yaml
+++ b/.github/workflows/Postman.yaml
@@ -35,7 +35,7 @@ jobs:
       # Run the POSTMAN collection
       - name: Run POSTMAN collection
         run: |
-          git add docs/index.html
+          git add -docs/index.html
           git commit -m "add docs"
           git pull
           git push https://${{secrets.TOKEN}}@github.com/${{github.repository}}.git HEAD:main
