--- a/.github/workflows/Postman.yaml
+++ b/.github/workflows/Postman.yaml
@@ -40,6 +40,8 @@ jobs:
         
       - name: Add Index file to GIT
         run: |
+          git config user.name "GunterLuck"
+          git config user.email "nkmts2510@gmail.com"
           git add .
           git commit -m "add docs"
           git push https://${{secrets.TOKEN}}@github.com/${{github.repository}}.git HEAD:main
